--- a/focus.html
+++ b/focus.html
@@ -31,6 +31,76 @@
     <div class="articles-container">
       <h2 class="title-underline3" >RETROUVEZ TOUS LES FOCUS</h2>
       <div class="article">
+        <img src="./img/Focus/Harow/PPHarow.png" alt="Kid">
+        <h2>HAROW</h2>
+        <div class="article-author">
+          <p>M. Lemercier</p>
+        </div>
+        <div class="article-content">
+          <p>Je promeus ce mois-ci <span class="gras">@Harow</span>.
+            Ce mois-ci, c'est un artiste pur que je vais vous présenter. 
+            Harow dessine ses oeuvres sur un tableau, à l'ancienne, en physique.
+            Les personnages sont dessinés à partir du torse, dans des couleurs assez flashis.
+            Le visuel final est soigné, il y a un gros travail sur les détails, d'ombre, de texture. On peut noter à cela la patte du dessinateur sur les sourires, les expressions qui ressemblent vraiment au manga original.
+            Harow a un shop dans lequel on peut retrouver tous ses portraits à 150€. Il vend également ses oeuvres originales de temps en temps. Soyez à l'affut!
+            Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & son shop.
+            Au plaisir pour un nouveau focus :)</p>
+        </div>
+        <div class="article-date">
+          <p>Décembre 2020</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img src="./img/Focus/Harow/Piccolo.png" alt="Piccolo" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Piccolo</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Harow</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/Harow/Zoro.png" alt="Zoro" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Roronoa Zoro</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Harow</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/Focus/Harow/Tanjiro.png" alt="Tanjiro" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Tanjiro Kamado</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Harow</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/Focus/Harow/KenKaneki.png" alt="Kaneki" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Ken Kaneki</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: Harow</p>
+          </div>
+      </li>
+        </ul>
+    </div>
+  </section>
+  <div class="cover">
+    <a class="espacedroite" href="https://harowpainting.wixsite.com/website" target="_blank">
+      <i class="fab fa-cart"></i>Harow
+    </a>
+    <a class="espacegauche" href="https://www.instagram.com/har0w/" target="_blank">
+      <i class="fab fa-instagram"></i>Har0w
+    </a>
+  </div>
+  <div class="content">
+    <div class="articles-container">
+      <div class="article">
         <img src="./img/Focus/ArisRoth/LivaiPP2ArisRoth.jpg" alt="Livai">
         <h2>Aris Roth</h2>
         <div class="article-author">
