--- a/index.html
+++ b/index.html
@@ -45,42 +45,42 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >Jujutsu Kaizen & Satoru Gojo sont sur WALL. - par Bulehya</h2>
+          <h2 class="title-underline" >Jujutsu Kaisen arrive sur WALL. </h2>
           <ul class="appreciate-list">
             <li class="appreciate-elem">
-              <img src="./img/JujutsuKaizen/Gojo1.JPG" alt="Gojo" class="appreciate-elem-img">
+              <img src="./img/JujutsuKaizen/Gojosatoruruejapon.JPG" alt="Gojo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Satoru Gojo</p>
-                  <p>Rire</p>
+                  <p>Ruelle</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Bulehya</p>
+                  <p>Auteur: ISARIXZ</p>
               </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/JujutsuKaizen/GojoVsSukuna.JPG" alt="Gojo" class="appreciate-elem-img">
+              <img src="./img/JujutsuKaizen/Sukuna1.jpeg" alt="Sukuna" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Satoru Gojo</p>
-                  <p>Vs Sukuna</p>
+                  <p>Sukuna</p>
+                  <p>Vs Itadori</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Bulehya</p>
+                  <p>Auteur: ISARIXZ</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/JujutsuKaizen/Gojo3.jpeg" alt="Gojo" class="appreciate-elem-img">
+              <img src="./img/JujutsuKaizen/Itadori1.JPG" alt="Itadori" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Satoru Gojo</p>
-                  <p>Infini</p>
+                  <p>Yuji Itadori</p>
+                  <p>?</p>
                   <div class="appreciate-separator"></div>
                   <p>Auteur: Bulehya</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/JujutsuKaizen/Gojo2.JPG" alt="Gojo" class="appreciate-elem-img">
+            <img src="./img/JujutsuKaizen/Satorudraw.JPG" alt="Gojo" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Satoru Gojo</p>
-                  <p>Street vibes</p>
+                  <p>Drawing</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Bulehya</p>
+                  <p>Auteur: Titanium</p>
               </div>
         </li>
           </ul>
@@ -89,22 +89,22 @@
     <div class="pack">
       <div class="pack-container">
         <h2 class="pack-title">STARTER PACK</h2>
-        <p class="pack-title">Shanks & Baggy</p>
+        <p class="pack-title">Glycines - Examen Final</p>
           <div class="starter">
             <ul class="starter-list1">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB1.jpeg" alt="ShanksBaggy">
+                <img class="borderpack" src="./img/affiche/KnYExamen/kny1.jpeg" alt="Kny">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB2.jpeg" alt="ShanksBaggy">
+                <img class="borderpack" src="./img/affiche/KnYExamen/kny2.jpeg" alt="Kny">
               </li>
             </ul>
             <ul class="starter-list2">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB3.jpeg" alt="ShanksBaggy">
+                <img class="borderpack" src="./img/affiche/KnYExamen/kny3.jpeg" alt="Kny">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/Shanks&Baggy/SB4.jpeg" alt="ShanksBaggy">
+                <img class="borderpack" src="./img/affiche/KnYExamen/kny4.jpeg" alt="Kny">
               </li>
             </ul>
           </div>
@@ -114,22 +114,23 @@
       <div class="articles-container">
         <h2 class="title-underline2" >LE FOCUS</h2>
         <div class="article">
-          <img src="./img/Focus/ArisRoth/LivaiPP2ArisRoth.jpg" alt="Livai">
-          <h2>Aris Roth</h2>
+          <img src="./img/Focus/Harow/PPHarow.png" alt="Kid">
+          <h2>HAROW</h2>
           <div class="article-author">
             <p>M. Lemercier</p>
           </div>
           <div class="article-content">
-            <p>Je promeus ce mois-ci <span class="gras">@ArisRoth</span>.
-              Ce mois-ci, c'est un artiste assez original que je vais vous présenter. 
-              Arisroth ne dessine qu'avec deux couleurs, le rose & le bleu et c'est ce qui fait toute son originalité.
-              Les personnages sont dessinés dans un autre style dans des couleurs différentes ce qui dénature beaucoup les personnages. Tout cela est très beau et intéressant.
-              Les deux uniques couleurs dégagent une atmosphère qui s'ajoute à son propre style, sa propre patte de dessinateur. Le résultat est soigné, c'est propre !!
-              Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & son twitter.
+            <p>Je promeus ce mois-ci <span class="gras">@Harow</span>.
+              Ce mois-ci, c'est un artiste pur que je vais vous présenter. 
+              Harow dessine ses oeuvres sur un tableau, à l'ancienne, en physique.
+              Les personnages sont dessinés à partir du torse, dans des couleurs assez flashis.
+              Le visuel final est soigné, il y a un gros travail sur les détails, d'ombre, de texture. On peut noter à cela la patte du dessinateur sur les sourires, les expressions qui ressemblent vraiment au manga original.
+              Harow a un shop dans lequel on peut retrouver tous ses portraits à 150€. Il vend également ses oeuvres originales de temps en temps. Soyez à l'affut!
+              Je vous laisse ci-dessous quelques unes de ses oeuvres, son instagram & son shop.
               Au plaisir pour un nouveau focus :)</p>
           </div>
           <div class="article-date">
-            <p>Novembre 2020</p>
+            <p>Décembre 2020</p>
           </div>
         </div>
       </div>
@@ -138,46 +139,46 @@
       <div class="container">
           <ul class="appreciate-list">
               <li class="appreciate-elem">
-                <img src="./img/Focus/ArisRoth/KakashiArisRoth.jpg" alt="Kakashi" class="appreciate-elem-img">
+                <img src="./img/Focus/Harow/Piccolo.png" alt="Piccolo" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Kakashi Hatake</p>
+                    <p>Piccolo</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: Arisroth</p>
+                    <p>Auteur: Harow</p>
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/ArisRoth/LuffyArisRoth.jpg" alt="Luffy" class="appreciate-elem-img">
+              <img src="./img/Focus/Harow/Zoro.png" alt="Zoro" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Monkey D. Luffy</p>
+                  <p>Roronoa Zoro</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Arisroth</p>
+                  <p>Auteur: Harow</p>
               </div>
           </li>
             <li class="appreciate-elem">
-              <img src="./img/Focus/ArisRoth/ZoroSanjiArisRoth.jpg" alt="Zoro&SAnji" class="appreciate-elem-img">
+              <img src="./img/Focus/Harow/Tanjiro.png" alt="Tanjiro" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Zoro & Sanji</p>
+                  <p>Tanjiro Kamado</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: Arisroth</p>
+                  <p>Auteur: Harow</p>
               </div>
           </li>
           <li class="appreciate-elem">
-            <img src="./img/Focus/ArisRoth/GokuArisRoth.jpg" alt="Goku" class="appreciate-elem-img">
+            <img src="./img/Focus/Harow/KenKaneki.png" alt="Kaneki" class="appreciate-elem-img">
             <div class="appreciate-elem-text">
-                <p>Son Goku</p>
+                <p>Ken Kaneki</p>
                 <div class="appreciate-separator"></div>
-                <p>Auteur: Arisroth</p>
+                <p>Auteur: Harow</p>
             </div>
         </li>
           </ul>
       </div>
     </section>
     <div class="cover">
-      <a class="espacedroite" href="https://twitter.com/arisroth" target="_blank">
-        <i class="fab fa-twitter"></i>arisroth
+      <a class="espacedroite" href="https://harowpainting.wixsite.com/website" target="_blank">
+        <i class="fab fa-cart"></i>Harow
       </a>
-      <a class="espacegauche" href="https://www.instagram.com/arisroth/" target="_blank">
-        <i class="fab fa-instagram"></i>arisroth
+      <a class="espacegauche" href="https://www.instagram.com/har0w/" target="_blank">
+        <i class="fab fa-instagram"></i>Har0w
       </a>
     </div>
     <footer>
