--- a/BannerDB.html
+++ b/BannerDB.html
@@ -12,6 +12,7 @@
       src="https://kit.fontawesome.com/83f4286022.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="./favicon/Logo1.svg"> 
     <link rel="stylesheet" href="css/variables.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>WALL.</title>
