--- a/POther.html
+++ b/POther.html
@@ -291,6 +291,44 @@
             </div>
       </li>
         </ul>
+        <ul class="appreciate-list">
+          <li class="appreciate-elem">
+            <img src="./img/JujutsuKaizen/Gojosatoruruejapon.JPG" alt="Gojo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Satoru Gojo</p>
+                <p>Ruelle</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: ISARIXZ</p>
+            </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/JujutsuKaizen/Sukuna1.jpeg" alt="Sukuna" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Sukuna</p>
+                <p>Vs Itadori</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: ISARIXZ</p>
+            </div>
+        </li>
+          <li class="appreciate-elem">
+            <img src="./img/JujutsuKaizen/Itadori1.JPG" alt="Itadori" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Yuji Itadori</p>
+                <p>?</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Bulehya</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img src="./img/JujutsuKaizen/Satorudraw.JPG" alt="Gojo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Satoru Gojo</p>
+                <p>Drawing</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Titanium</p>
+            </div>
+      </li>
+    </ul>
     </div>
   </section>
   <footer>
