--- a/index.html
+++ b/index.html
@@ -47,64 +47,64 @@
       <div class="container">
           <h2 class="title-underline" >Jujutsu Kaisen arrive sur WALL. </h2>
           <ul class="appreciate-list">
-            <li class="appreciate-elem">
-              <img src="./img/JujutsuKaizen/Gojosatoruruejapon.JPG" alt="Gojo" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Satoru Gojo</p>
-                  <p>Ruelle</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Auteur: ISARIXZ</p>
-              </div>
-            </li>
-            <li class="appreciate-elem">
-              <img src="./img/JujutsuKaizen/Sukuna1.jpeg" alt="Sukuna" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Sukuna</p>
-                  <p>Vs Itadori</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Auteur: ISARIXZ</p>
-              </div>
-          </li>
-            <li class="appreciate-elem">
-              <img src="./img/JujutsuKaizen/Itadori1.JPG" alt="Itadori" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Yuji Itadori</p>
-                  <p>?</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Auteur: Bulehya</p>
-              </div>
-          </li>
-          <li class="appreciate-elem">
-            <img src="./img/JujutsuKaizen/Satorudraw.JPG" alt="Gojo" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Satoru Gojo</p>
-                  <p>Drawing</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Auteur: Titanium</p>
-              </div>
+        <li class="appreciate-elem">
+          <img src="./img/Mingo/HimejimaW 11.07.47.png" alt="Himejima" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Himejima Gyomei</p>
+              <p>Temple Daigo-Ji</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: MINGO</p>
+          </div>
         </li>
+        <li class="appreciate-elem">
+          <img src="./img/Mingo/SukunaW.png" alt="Sukuna" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Sukuna</p>
+              <p>Domain expansion</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: MINGO</p>
+          </div>
+      </li>
+        <li class="appreciate-elem">
+          <img src="./img/Mingo/Doflamingo.png" alt="Doflamingo" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Doflamingo</p>
+              <p>FACE</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: MINGO</p>
+          </div>
+      </li>
+      <li class="appreciate-elem">
+        <img src="./img/Mingo/Livai.png" alt="Livai" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>Livaï Ackerman</p>
+              <p>flow</p>
+              <div class="appreciate-separator"></div>
+              <p>Auteur: MINGO</p>
+          </div>
+    </li>
           </ul>
       </div>
     </section>
     <div class="pack">
       <div class="pack-container">
         <h2 class="pack-title">STARTER PACK</h2>
-        <p class="pack-title">Glycines - Examen Final</p>
+        <p class="pack-title">SUKUNA VS FUSHIGURO</p>
           <div class="starter">
             <ul class="starter-list1">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KnYExamen/kny1.jpeg" alt="Kny">
+                <img class="borderpack" src="./img/affiche/SukunavsFushiguro/Sukuna1.jpeg" alt="sukunavsfushiguro">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KnYExamen/kny2.jpeg" alt="Kny">
+                <img class="borderpack" src="./img/affiche/SukunavsFushiguro/Sukuna2.jpeg" alt="sukunavsfushiguro">
               </li>
             </ul>
             <ul class="starter-list2">
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KnYExamen/kny3.jpeg" alt="Kny">
+                <img class="borderpack" src="./img/affiche/SukunavsFushiguro/Sukuna3.jpeg" alt="sukunavsfushiguro">
               </li>
               <li class="starter-elem">
-                <img class="borderpack" src="./img/affiche/KnYExamen/kny4.jpeg" alt="Kny">
+                <img class="borderpack" src="./img/affiche/SukunavsFushiguro/Sukuna4.jpeg" alt="sukunavsfushiguro">
               </li>
             </ul>
           </div>
