--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >Jujutsu Kaisen arrive sur WALL. </h2>
+          <h2 class="title-underline" >MINGO arrive sur WALL. </h2>
           <ul class="appreciate-list">
         <li class="appreciate-elem">
           <img src="./img/Mingo/HimejimaW 11.07.47.png" alt="Himejima" class="appreciate-elem-img">
